--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body{
     display: grid;
     min-height: 100vh;
     grid-template-rows: auto 1fr auto;
-    letter-spacing: 0.30em ;
+    letter-spacing: 0.15em ;
     line-height: 1.6;
     font-size: 14px;
   
@@ -92,10 +92,10 @@ p{
 }
 .container{
     display: flex;
-    margin-bottom: 30px;
     justify-content: space-evenly;
-    
     align-content: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-bottom: 30px;
     margin: px 0px;
     width: 100%;
     
