--- a/index.css
+++ b/index.css
@@ -1,18 +1,16 @@
 *{
-    
-    margin:0px;
+    padding: 0;
+    margin:0;
     box-sizing: content-box;
 }
 
-body{
-    display: grid;
-    min-height: 100vh;
-    min-width: 359px;
+ body{
+    
     grid-template-rows: auto 1fr auto;
     letter-spacing: 0.15em ;
     line-height: 1.6;
     font-size: 14px;
-    
+     
 
 }
 /* Menu de navegacion */
@@ -45,7 +43,7 @@ h1{
     justify-content: space-evenly;
     align-content: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin: 0px;
+    margin: 30px 0PX;
     width: 100%;
     
 }
@@ -195,7 +193,7 @@ textarea{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin-top: 50px;
+    margin: 5.9% 0PX;
     min-height: 80%;
 
 }
@@ -310,7 +308,7 @@ footer a:hover{
 }   
 @media (max-width:576px){
     .logo-ford{
-        width: 100px;
+        width: 150px;
     }
     .contenedor_informacion{
         margin: auto;
@@ -325,6 +323,11 @@ footer a:hover{
         width: 250px;
 
     }
- 
+    .video-raptor{
+        width: 357px;
+    }
+    footer{
+        flex-direction: column;
+    }
 }
 
