--- a/index.css
+++ b/index.css
@@ -99,11 +99,15 @@ h1{
 }
 .texto-informativo-raptor p{
    text-align: center;
+   width: 80%;
 }
 .contenedor-ford{
     display: grid;
     grid-template-columns: 1fr;
     justify-items: center;
+    
+    /* background-color:rgb(0, 80, 117); */
+    
     /* align-items: center; */
 
 } 
@@ -130,63 +134,60 @@ h1{
 }
 /* Dudasyconsultas.html*/
 .section_formulario{
-    margin: auto;
-    border: 2px solid rgba(0, 0, 0,0.4);
-    border-radius: 7px;
-    margin-top: 1.4%;
-    width: 450px;
-    height: auto;
+   display: flex;
+   justify-content: center;
+   align-content: center;
 }
 .formulario{
-    display: grid;
+    display: flex;
+   flex-direction: column;
+   justify-content: center;
     align-items: center;
-    justify-items: center;
-    text-align: center;
-    box-shadow: 0px 4px 12px rgba(56, 56, 56, 0.5);
-    /* background-image: url("./Imagenes\ y\ videos/fondo_form.jpg"); */
-    background-repeat: no-repeat;
-    background-size: cover;
+    margin: 3.3% 0px;
+    border: 2px solid rgb(107, 107, 107);
+    box-shadow: 0px 2px 12px rgba(0, 0, 0,0.2);
+    border-radius: 10px;
+    padding: 30px;
+    box-sizing: content-box;
+    
 }
 .titulo_formulario{
-    color: rgb(0, 0, 0);
-    text-shadow: 0px 2px 2px rgba(56, 56, 56, 0.5);
-
-    font-size: 25px;
-    margin: 20px 0px;
+   text-align: center;
+   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 label{
-    
-    cursor: pointer;
-    
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+   margin-bottom: 5px;   
+    width: 100%;   
 }
 .inputs{
-    color: black;
-    text-shadow: 0px 2px 2px rgba(56, 56, 56, 0.5);
-    width: 400px;
-    outline: none;
-    border: none;
-    margin: 10px 0px;
-    padding: 5px;
-    border-bottom: 1px solid rgb(1,51,120);
-    border-radius: 5px;
-    justify-items: center;
-
+   width: 100%;
+   border: none;
+   border-bottom: 1px solid;
+   border-radius: 5px;
+   margin-bottom: 20px;
 }
 textarea{
-     margin-bottom: 10px;
+   display: flex;
+   justify-content: center;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    width: 100%;
 }
 .boton_enviar{
-    padding: 13px 160px;
-    margin-bottom: 10px;
     border: none;
-    background-color: rgb(255,255,255);
-    border: 1px solid rgba(0, 0, 0,0.1);
-    border-radius: 4px;
-    transition: all 0.5s;
+  margin-top: 20px;
+    padding: 20px 100px;
+    transition: all 0.4s;
 }
 .boton_enviar:hover{
-    background-color: rgb(1,51,120);
+   background-color: antiquewhite;
+    background-color: rgb(0, 176, 199);
     color: white;
+    border: none;
+     box-shadow: 0px 2px 12px;
 }
 /* Preguntas frecuentes */
 .contenedor_informacion{
@@ -229,7 +230,7 @@ footer{
     display: flex;
     background-color: rgb(1,51,120);
     border-top: 1px solid white;
-    padding: 30px;
+    padding: 50px;
     justify-content: center;
     align-content: flex-end;
    
@@ -237,7 +238,7 @@ footer{
 footer a{
     text-decoration: none;
     margin-left: 42px;
-    font-size: 12px;
+    font-size: 16px;
     color: white;
     cursor: pointer;
 }
@@ -317,17 +318,19 @@ footer a:hover{
         margin: 30px 0px;
     }
     .cartas-autos-ford{
-        width: 250px;
+        width: 80%;
     }
     .img-raptor{
-        width: 250px;
+        width: 80%;
 
     }
     .video-raptor{
-        width: 357px;
+        width: 100%;
     }
     footer{
         flex-direction: column;
     }
+    .section_formulario{
+        width: 90%;
+    }
 }
-
