agregado de responsive sass

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -28,5 +28,9 @@
 
 // Footer 
 
-@import "./Secciones/footer"
+@import "./Secciones/footer";
+ 
+// Responsive
+
+@import "./Secciones/Responsive"
 
