--- a/css/index.css
+++ b/css/index.css
@@ -26,68 +26,6 @@ h1 {
 /* Preguntas frecuentes */
 /* Pie de pagina */
 /* Responsive mobile last */
-@media (max-width: 957px) {
-  .logo-ford {
-    width: 170px; }
-  .contenedor_boton-menu {
-    display: block;
-    height: 50px;
-    margin-left: -90%; }
-  .contenedor_boton-menu:hover {
-    background-color: #033b8a; }
-  .carta-ford {
-    margin: 30px 50px; }
-  .nav-bar {
-    display: none;
-    flex-wrap: wrap;
-    text-align: center;
-    margin-left: 120px; }
-  .container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    width: auto;
-    justify-content: center; }
-  .texto-informativo-raptor {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    width: 100vw;
-    justify-items: center; } }
-
-@media (max-width: 768px) {
-  .container {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    width: auto;
-    justify-items: center; }
-  .texto-informativo-raptor {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    width: 100vw;
-    justify-items: center; }
-  .contenedor_informacion {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    row-gap: 40px; } }
-
-@media (max-width: 576px) {
-  .logo-ford {
-    width: 150px; }
-  .contenedor_informacion {
-    margin: auto;
-    grid-template-columns: repeat(1, 1fr);
-    justify-items: center;
-    margin: 30px 0px; }
-  .cartas-autos-ford {
-    width: 80%; }
-  .img-raptor {
-    width: 80%; }
-  .video-raptor {
-    width: 100%; }
-  footer {
-    flex-direction: column; }
-  .section_formulario {
-    width: 90%; } }
-
 .navbar-background {
   background-color: #013378; }
 
@@ -107,7 +45,7 @@ h1 {
   justify-content: space-evenly;
   align-content: center;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  margin: 30px 0PX;
+  margin: 0px 0PX;
   width: 100%; }
 
 .carta-ford {
@@ -124,7 +62,7 @@ h1 {
 
 .button-carta-ford {
   font-size: 16px;
-  padding: 20px 111px;
+  padding: 20px 100px;
   background-color: white;
   border: none;
   border-radius: 10px;
@@ -154,7 +92,7 @@ h1 {
   justify-content: center;
   max-width: 1200px;
   width: 100%; }
-  .texto-informativo-raptorp {
+  .texto-informativo-raptor p {
     text-align: center;
     width: 80%; }
 
@@ -264,18 +202,23 @@ footer {
   display: flex;
   background-color: #013378;
   border-top: 1px solid white;
-  padding: 50px;
+  padding: 30px;
   justify-content: center;
   align-content: flex-end; }
   footer a {
+    display: flex;
+    justify-content: space-around;
     text-decoration: none;
-    margin-left: 42px;
+    margin: 0px 50px;
     font-size: 16px;
     color: white;
     cursor: pointer; }
     footer a:hover {
       transition: 0.4s;
       color: white; }
+
+.redes__sociales {
+  width: 50px; }
 
 @media (max-width: 957px) {
   .logo-ford {
@@ -330,6 +273,8 @@ footer {
     margin: 30px 0px; }
   .cartas-autos-ford {
     width: 80%; }
+  .button-carta-ford {
+    padding: 20px 80px; }
   .img-raptor {
     width: 80%; }
   .video-raptor {
@@ -338,3 +283,11 @@ footer {
     flex-direction: column; }
   .section_formulario {
     width: 90%; } }
+
+@media (max-width: 393px) {
+  .button-carta-ford {
+    padding: 20px 60px; } }
+
+@media (max-width: 353px) {
+  .button-carta-ford {
+    padding: 20px 40px; } }
