--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -9,7 +9,7 @@
     grid-template-rows: auto 1fr auto;
     letter-spacing: 0.15em ;
     line-height: 1.6;
-    font-size: 14px;
+    // font-size: 14px;
      
 
 }
