--- a/scss/Secciones/_footer.scss
+++ b/scss/Secciones/_footer.scss
@@ -4,12 +4,12 @@ footer{
     border-top: 1px solid white;
     padding: 30px;
     justify-content: center;
-    align-content: flex-end;
+    align-content: center;
 
         & a{
             display: flex;
             justify-content: space-around;
-            margin: 0px 40px;
+            margin: 0px 10%;
             font-size: 16px;
             color: white;
             cursor: pointer;
