--- a/css/index.css
+++ b/css/index.css
@@ -1,30 +1,3 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: content-box; }
-
-body {
-  grid-template-rows: auto 1fr auto;
-  letter-spacing: 0.15em;
-  line-height: 1.6; }
-
-/* Menu de navegacion */
-/* Parrafos */
-p {
-  margin: 20px 0px; }
-
-/* contenedor de cartas ford */
-h1 {
-  text-align: center;
-  color: #013378;
-  border-bottom: 1px solid #00409b; }
-
-/* Video raptor */
-/* Nosotros.html */
-/* Dudasyconsultas.html*/
-/* Preguntas frecuentes */
-/* Pie de pagina */
-/* Responsive mobile last */
 .navbar-background {
   background-color: #013378; }
 
@@ -37,15 +10,7 @@ h1 {
   margin: 40px; }
 
 .cartas-autos-ford {
-  width: 300px; }
-
-.container {
-  display: flex;
-  justify-content: space-evenly;
-  align-content: center;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  margin: 30px 0PX;
-  width: 100%; }
+  width: 250px; }
 
 .carta-ford {
   display: flex;
@@ -58,6 +23,14 @@ h1 {
     box-shadow: 0px 6px 12px rgba(56, 56, 56, 0.6);
     transform: translateY(-15px);
     cursor: pointer; }
+
+.container {
+  display: flex;
+  justify-content: space-evenly;
+  align-content: center;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  margin: 30px 0px;
+  width: 100%; }
 
 .button-carta-ford {
   font-size: 16px;
@@ -77,7 +50,7 @@ h1 {
 
 .img-raptor {
   margin: 20px;
-  width: 500px;
+  width: 400px;
   align-items: center; }
 
 .contenedor-ford {
@@ -89,6 +62,7 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 0px;
   max-width: 1200px;
   width: 100%; }
   .texto-informativo-raptor p {
@@ -103,26 +77,28 @@ h1 {
   width: 90%;
   text-align: center; }
 
-.titulo__modelo__t {
-  color: white;
-  font-family: 'Courier New', Courier, monospace;
-  margin: 20px 0px; }
-
 .contenedor__modelo__t {
   margin: 40px 0px;
   color: white;
   background-color: #013378;
   border-radius: 5px; }
 
+.titulo__modelo__t {
+  color: white;
+  font-family: "Courier New", Courier, monospace;
+  margin: 20px 0px; }
+
 .section_formulario {
   display: flex;
   justify-content: center;
-  align-content: center; }
+  margin: auto; }
 
 .formulario {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin: auto;
+  width: 400px;
   align-items: center;
   margin: 3.3% 0px;
   border: 2px solid #6b6b6b;
@@ -132,8 +108,9 @@ h1 {
   box-sizing: content-box; }
 
 .titulo_formulario {
+  width: 100%;
   text-align: center;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif; }
 
 label {
   text-align: center;
@@ -158,9 +135,11 @@ textarea {
 
 .boton_enviar {
   border: none;
+  border-radius: 10px;
   margin-top: 20px;
-  padding: 20px 100px;
-  transition: all 0.4s; }
+  padding: 20px 100%;
+  transition: all 0.4s;
+  margin-left: -70px; }
   .boton_enviar:hover {
     background-color: antiquewhite;
     background-color: #00b0c7;
@@ -197,23 +176,43 @@ textarea {
       transform: translateY(-10px);
       box-shadow: 0px 7px 12px rgba(56, 56, 56, 0.5); }
 
+.mensaje__aviso {
+  text-align: center;
+  color: white;
+  cursor: pointer;
+  background-color: #2595ff;
+  padding: 30px;
+  margin: 0px;
+  transition: all 0.3s; }
+  .mensaje__aviso:hover {
+    background-color: #3d3d3d; }
+  .mensaje__aviso-link {
+    color: white;
+    text-decoration: none; }
+    .mensaje__aviso-link:hover {
+      color: #8aedff;
+      text-decoration-line: underline; }
+
 footer {
   display: flex;
   background-color: #013378;
-  border-top: 1px solid white;
   padding: 30px;
   justify-content: center;
-  align-content: center; }
+  align-items: center; }
   footer a {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     margin: 0px 10%;
     font-size: 16px;
     color: white;
     cursor: pointer; }
 
 .redes__sociales {
-  width: 40px; }
+  width: 50px;
+  height: 50px; }
+
+.logo-ford-footer {
+  width: 150px; }
 
 @media (max-width: 957px) {
   .logo-ford {
@@ -241,6 +240,16 @@ footer {
     grid-template-columns: repeat(1, 1fr);
     width: 100vw;
     justify-items: center; } }
+
+@media (max-width: 819px) {
+  footer {
+    flex-direction: column;
+    gap: 40px; }
+  .redes__sociales {
+    width: 50px;
+    height: 50px; }
+  .logo-ford-footer {
+    width: 150px; } }
 
 @media (max-width: 768px) {
   .container {
@@ -274,19 +283,34 @@ footer {
     width: 80%; }
   .video-raptor {
     width: 100%; }
-  footer {
-    flex-direction: column; }
   .section_formulario {
-    width: 90%; }
-  footer {
-    flex-direction: row; } }
+    width: 90%; } }
 
 @media (max-width: 393px) {
   .button-carta-ford {
-    padding: 20px 60px; } }
+    padding: 20px 60px; }
+  footer {
+    flex-direction: column;
+    gap: 40px; }
+  .redes__sociales {
+    width: 50px;
+    height: 50px; }
+  .logo-ford-footer {
+    width: 150px; } }
 
 @media (max-width: 353px) {
   .button-carta-ford {
-    padding: 20px 40px; }
-  .redes__sociales {
-    width: 20px; } }
+    padding: 20px 40px; } }
+
+body {
+  grid-template-rows: auto 1fr auto;
+  letter-spacing: 0.15em;
+  line-height: 1.6; }
+
+h1 {
+  text-align: center;
+  color: #013378;
+  border-bottom: 1px solid #00409b; }
+
+p {
+  margin: 20px 0px; }
