--- a/scss/Secciones/_Dudasyconsultas.scss
+++ b/scss/Secciones/_Dudasyconsultas.scss
@@ -1,57 +1,65 @@
-.section_formulario{
-    display: flex;
-    justify-content: center;
-    align-content: center;
- }
- .formulario{
-     display: flex;
-    flex-direction: column;
-    justify-content: center;
-     align-items: center;
-     margin: 3.3% 0px;
-     border: 2px solid rgb(107, 107, 107);
-     box-shadow: 0px 2px 12px rgba(0, 0, 0,0.2);
-     border-radius: 10px;
-     padding: 30px;
-     box-sizing: content-box;
-     
- }
- .titulo_formulario{
-    text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
- }
- label{
-     text-align: center;
-     font-family: Arial, Helvetica, sans-serif;
-    margin-bottom: 5px;   
-     width: 100%;   
- }
- .inputs{
-    width: 100%;
-    border: none;
-    border-bottom: 1px solid;
-    border-radius: 5px;
-    margin-bottom: 20px;
- }
- textarea{
-    display: flex;
-    justify-content: center;
-     align-items: center;
-     font-family: Arial, Helvetica, sans-serif;
-     text-align: center;
-     width: 100%;
- }
- .boton_enviar{
-     border: none;
-   margin-top: 20px;
-     padding: 20px 100px;
-     transition: all 0.4s;
+// Contenedor formulario
+.section_formulario {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+}
+.formulario {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: auto;
+  width: 400px;
+  align-items: center;
+  margin: 3.3% 0px;
+  border: 2px solid rgb(107, 107, 107);
+  box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  padding: 30px;
+  box-sizing: content-box;
+}
+// Titulo formulario
+.titulo_formulario {
+  width: 100%;
+  text-align: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+// Label/inputs
+label {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-bottom: 5px;
+  width: 100%;
+}
+.inputs {
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+textarea {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  width: 100%;
+}
+// Boton
+.boton_enviar {
+  border: none;
+  border-radius: 10px;
+  margin-top: 20px;
+  padding: 20px 100%;
+  transition: all 0.4s;
+  margin-left: -70px;
 
-        &:hover{
-        background-color: antiquewhite;
-        background-color: rgb(0, 176, 199);
-        color: white;
-        border: none;
-        box-shadow: 0px 2px 12px;
-        }
- }
+  &:hover {
+    background-color: antiquewhite;
+    background-color: rgb(0, 176, 199);
+    color: white;
+    border: none;
+    box-shadow: 0px 2px 12px;
+  }
+}
