--- a/scss/Secciones/_Nosotros.scss
+++ b/scss/Secciones/_Nosotros.scss
@@ -1,20 +1,23 @@
-.contenedor__texto__informativo__ford{
-    display: flex;
-    justify-content: center;
+// Contenedor de texto ford
+.contenedor__texto__informativo__ford {
+  display: flex;
+  justify-content: center;
 }
-
-.texto__informativo__ford{
-    width: 90%;
-    text-align: center;
+// Texto 
+.texto__informativo__ford {
+  width: 90%;
+  text-align: center;
 }
-.titulo__modelo__t{
-    color: white ;
-    font-family: 'Courier New', Courier, monospace;
-    margin: 20px 0px;
+// Contenedor modelo T
+.contenedor__modelo__t {
+  margin: 40px 0px;
+  color: white;
+  background-color: rgb(1, 51, 120);
+  border-radius: 5px;
 }
-.contenedor__modelo__t{
-    margin: 40px 0px;
-    color: white;
-    background-color: rgb(1,51,120);
-    border-radius: 5px;
+// Titulo modelo T
+.titulo__modelo__t {
+  color: white;
+  font-family: "Courier New", Courier, monospace;
+  margin: 20px 0px;
 }
