--- a/scss/Secciones/_Preguntas_frecuentes.scss
+++ b/scss/Secciones/_Preguntas_frecuentes.scss
@@ -1,38 +1,60 @@
-.contenedor_informacion{
+// Contenedor de informacion sobre preguntas frecuentes 
+.contenedor_informacion {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 5.01% 0px;
+  min-height: 80%;
+
+  &-contacto {
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: column;
+    text-align: center;
     align-items: center;
-    margin: 5.01% 0px;
-    min-height: 80%;
+    justify-content: space-evenly;
+    padding: 30px;
+    box-sizing: border-box;
+    border: 2px solid rgba(0, 0, 0, 0.2);
+    border-radius: 7%;
+    width: 300px;
+    height: 400px;
+    gap: 20px 0px;
+    cursor: pointer;
+    transition: all 1s;
 
-        &-contacto{
-            display: flex;
-            flex-direction: column;
-            text-align: center;
-            align-items: center;
-            justify-content: space-evenly;
-            padding: 30px;
-            box-sizing: border-box;
-            border: 2px solid rgba(0, 0, 0,0.2);
-            border-radius: 7%;
-            width: 300px;
-            height: 400px;
-            gap: 20px 0px;
-            cursor: pointer;
-            transition: all 1s;
+    & img {
+      width: 100px;
+    }
 
-        & img{
-            width: 100px;
-        }
-
-        &:hover{
-            background-color: rgb(255, 255, 255);
-            border: 2px solid rgba(0, 0, 0,0.1); ;
-            transform: translateY(-10px);
-            box-shadow: 0px 7px 12px rgba(56, 56, 56, 0.5)
-        }
-        }
-    
+    &:hover {
+      background-color: rgb(255, 255, 255);
+      border: 2px solid rgba(0, 0, 0, 0.1);
+      transform: translateY(-10px);
+      box-shadow: 0px 7px 12px rgba(56, 56, 56, 0.5);
+    }
+  }
 }
+// Mensaje parte inferior de la pagina 
+.mensaje__aviso {
+  text-align: center;
+  color: white;
+  cursor: pointer;
+  background-color: rgb(37, 149, 255);
+  padding: 30px;
+  margin: 0px;
+  transition: all 0.3s;
 
+  &:hover {
+    background-color: rgb(61, 61, 61);
+  }
 
+  &-link {
+    color: white;
+    text-decoration: none;
+
+    &:hover {
+      color: rgb(138, 237, 255);
+      text-decoration-line: underline;
+    }
+  }
+}
