--- a/scss/Secciones/_header.scss
+++ b/scss/Secciones/_header.scss
@@ -1,6 +1,7 @@
-.navbar-background{
-    background-color: rgb(1,51,120);
+// Cabeza
+.navbar-background {
+  background-color: rgb(1, 51, 120);
 }
-.logo-ford{
-    width: 150px;
+.logo-ford {
+  width: 150px;
 }
