--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,3 @@
-// componentes 
-
-@import "./index";
-
 // Header 
 
 @import "./Secciones/header";
@@ -32,5 +28,8 @@
  
 // Responsive
 
-@import "./Secciones/Responsive"
+@import "./Secciones/Responsive";
 
+// General
+
+@import "./Secciones/general"
