Implementacion de js en el proyecto con condicionales, local storage y JSON

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,4 +32,8 @@
 
 // General
 
-@import "./Secciones/general"
+@import "./Secciones/general";
+
+// Pagina de compra final 
+
+@import "./Secciones/paginaCompra";
