--- a/css/index.css
+++ b/css/index.css
@@ -196,7 +196,6 @@ textarea {
 footer {
   display: flex;
   background-color: #013378;
-  padding: 30px;
   justify-content: center;
   align-items: center; }
   footer a {
@@ -314,3 +313,52 @@ h1 {
 
 p {
   margin: 20px 0px; }
+
+body {
+  background-color: #ffffff; }
+
+.titulo-pagina-compras {
+  background: linear-gradient(#013378 56%, white);
+  color: white;
+  text-shadow: 2px 2px 12px 2px rgba(0, 0, 0, 0.5);
+  border: none;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-stretch: condensed; }
+
+.contenedor-p-compras {
+  display: flex;
+  border: 2px solid;
+  border-radius: 10px;
+  box-shadow: 2px 2px 12px 2px rgba(68, 68, 68, 0.5);
+  width: 160vh;
+  height: 65vh;
+  align-items: center;
+  justify-content: center;
+  margin: 34px auto; }
+  .contenedor-p-compras-imagen-vehiculo {
+    width: 100%;
+    margin: 50px; }
+  .contenedor-p-compras-informacion {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    box-sizing: border-box;
+    margin: 0px 50px;
+    width: 100%;
+    height: 100%;
+    padding: 0px; }
+    .contenedor-p-compras-informacion-titulo-Auto {
+      font-weight: bolder;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
+  .contenedor-p-compras-boton-confirmar {
+    background-color: #013378;
+    color: white;
+    border-radius: 10px;
+    width: 100%;
+    height: 80px;
+    box-shadow: 2px 2px 12px 2px rgba(68, 68, 68, 0.5);
+    transition: 0.3s; }
+    .contenedor-p-compras-boton-confirmar:hover {
+      width: 105%;
+      height: 80px; }
