--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,30 @@
 .logo-ford {
   width: 150px; }
 
+.boton-buscar {
+  color: white;
+  border: 1px solid white; }
+  .boton-buscar:hover {
+    background-color: rgba(255, 255, 255, 0.705);
+    color: #013378;
+    text-size-adjust: bolder;
+    border: 1px solid #013378; }
+
+.billetera {
+  display: flex;
+  margin-left: 10px;
+  background-color: rgba(110, 120, 129, 0.562);
+  color: white;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 700;
+  border-radius: 20px;
+  padding: 10px; }
+
+#cartera {
+  margin-left: 10px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 700; }
+
 .cartas-ford {
   display: flex;
   justify-content: center;
@@ -362,3 +386,6 @@ body {
     .contenedor-p-compras-boton-confirmar:hover {
       width: 105%;
       height: 80px; }
+
+body {
+  font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial, sans-serif; }
