--- a/scss/Secciones/_header.scss
+++ b/scss/Secciones/_header.scss
@@ -5,3 +5,34 @@
 .logo-ford {
   width: 150px;
 }
+// Boton buscar
+.boton-buscar{
+  color: white;
+  border: 1px solid white;
+
+   &:hover{
+    background-color: rgba(255, 255, 255, 0.705);
+    color: rgb(1,51,120);
+    text-size-adjust: bolder;
+    border: 1px solid rgb(1,51,120);
+
+   }
+}
+.billetera{
+  display: flex;
+  margin-left: 10px;
+  background-color: rgba(110, 120, 129, 0.562);
+  color: rgb(255, 255, 255);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 700;
+  border-radius: 20px;
+  padding: 10px;
+
+}
+
+#cartera{
+  margin-left: 10px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 700;
+  
+}
