--- a/scss/Secciones/_paginaCompra.scss
+++ b/scss/Secciones/_paginaCompra.scss
@@ -66,3 +66,7 @@ body {
     
     }
 }
+// sweet alert
+body {
+    font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial, sans-serif; 
+  }
